--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "funding": "https://github.com/sponsors/dword-design",
   "license": "MIT",
   "author": "Sebastian Landwehr <info@sebastianlandwehr.com>",
+  "type": "module",
+  "exports": "./dist/index.js",
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -12,6 +14,7 @@
   "scripts": {
     "checkUnknownFiles": "base checkUnknownFiles",
     "commit": "base commit",
+    "depcheck": "base depcheck",
     "dev": "base dev",
     "lint": "base lint",
     "prepare": "base prepare",
@@ -22,14 +25,14 @@
     "@dword-design/functions": "^4.0.4"
   },
   "devDependencies": {
-    "@dword-design/base": "^8.1.11",
+    "@dword-design/base": "^9.4.7",
     "firebase-admin": "^9.2.0"
   },
   "peerDependencies": {
     "firebase-admin": "^9.2.0"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
   "publishConfig": {
     "access": "public"
