--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
       - run: yarn --frozen-lockfile
       - env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TEST_FIREBASE_ADMIN_CONFIG: ${{ secrets.TEST_FIREBASE_ADMIN_CONFIG }}
         run: yarn test
       - if: failure()
         uses: actions/upload-artifact@v3
