--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
   },
   "devDependencies": {
     "@dword-design/base": "^9.4.7",
-    "firebase-admin": "^9.2.0"
+    "@dword-design/dotenv-json-extended": "^2.0.9",
+    "@dword-design/tester": "^2.0.12",
+    "execa": "^7.1.0",
+    "firebase-admin": "^9.2.0",
+    "fs-extra": "^11.1.0"
   },
   "peerDependencies": {
     "firebase-admin": "^9.2.0"
